# DownloadRouterConfig

./: .bandit.yml  .gitignore  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  COPYING  COPYING.md  Dockerfile  DownloadRouterConfig.py  INSTALL  INSTALL.md  README  README.md  TODO  TODO.md  pyproject.toml  settings.cfg
download_router_config/: __init__.py  config.py  download_router_config.py
example/: 192.168.1.1_Config_2013-04-08.txt  example.txt  readme.txt  routers.lst  routers.txt  status.txt
example/configs_20130626/: 10.10.10.14_Config_20130626.txt
example/configs_20130720/: 10.10.10.11_Config_20130720.txt
tests/: test_class_config.py
