[tool.poetry]
name = "download_router_config"
version = "4.1.0"
description = "A Python script to capture the running-config of Cisco Routers and Switches."
authors = ["Aaron Melton <aaron@aaronmelton.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aaron-common-libs = {git = "https://github.com/aaronmelton/aaron-common-libs.git"}
napalm = "^4.1.0"
rich = "^13.7.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^23.7.0"
coverage = "^7.2.7"
flake8 = "^4.0.1"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
pytest = "^7.1.1"
pytest-env = "^1.0.1"
toml = "^0.10.2"
Flake8-pyproject = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B108"]
exclude_dirs = ["./tests/"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
        /(
          \.git
        | \.tox
        | \.venv
        | env/
        | _build
        | build
        | dist
        )/
    '''

[tool.flake8]
ignore = ['E501', 'W503']

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = '''google'''
inherit = false
match = '''(?!__init__).*\.py'''
match-dir = '''(?!tests)[^\.].*'''

[tool.pylint.master]
init-hook = 'import os, sys; sys.path.append(os.path.dirname("download_router_config/"));'

[tool.pylint.messages_control]
disable = '''
    line-too-long,
    '''

[tool.pylint.miscellaneous]
notes = ''',
    TODO.md,
    '''

[tool.pytest.ini_options]
pythonpath = [".", "download_router_config/"]
env = ["LOG_LEVEL = DEBUG",
    "LOG_PATH = /tmp/"]
